--- a/abstract-factory/pom.xml
+++ b/abstract-factory/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <artifactId>abstract-factory</artifactId>
     <name>abstract-factory</name>
-    <url>http://maven.apache.org</url>
+    <url>https://github.com/cyhe/design-patterns</url>
     <dependencies>
     </dependencies>
 </project>
