--- a/factory-method/pom.xml
+++ b/factory-method/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <artifactId>factory-method</artifactId>
     <name>factory-method</name>
-    <url>http://maven.apache.org</url>
+    <url>https://github.com/cyhe/design-patterns</url>
     <dependencies>
     </dependencies>
 </project>
