--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <packaging>pom</packaging>
     <name>design-patterns</name>
     <description>设计模式</description>
+    <url>https://github.com/cyhe/design-patterns</url>
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <compiler.version>3.3</compiler.version>
@@ -44,5 +46,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
